--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -47,6 +47,22 @@ services:
                 - '-p${DB_PASSWORD}'
             retries: 3
             timeout: 5s
+    phpmyadmin:
+        image: 'phpmyadmin/phpmyadmin'
+        ports:
+            - 8080:80
+        environment:
+            PMA_ARBITRARY: 1
+            MYSQL_ROOT_PASSWORD: '${DB_PASSWORD}'
+            MYSQL_USER: '${DB_USERNAME}'
+            MYSQL_PASSWORD: '${DB_PASSWORD}'
+            MYSQL_HOST: 'mysql'
+        depends_on:
+            - mysql
+        networks:
+            - sail
+        extra_hosts:
+            - 'host.docker.internal:host-gateway'
 
 networks:
     sail:
