--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,6 +23,8 @@ services:
             - sail
         depends_on:
             - mysql
+            - meilisearch
+            - redis
     mysql:
         image: 'mysql/mysql-server:8.0'
         ports:
@@ -48,25 +50,62 @@ services:
             retries: 3
             timeout: 5s
     phpmyadmin:
-        image: 'phpmyadmin/phpmyadmin'
+        image: phpmyadmin/phpmyadmin
         ports:
-            - 8080:80
+            - '8080:80'
         environment:
             PMA_ARBITRARY: 1
             MYSQL_ROOT_PASSWORD: '${DB_PASSWORD}'
             MYSQL_USER: '${DB_USERNAME}'
             MYSQL_PASSWORD: '${DB_PASSWORD}'
-            MYSQL_HOST: 'mysql'
+            MYSQL_HOST: mysql
         depends_on:
             - mysql
         networks:
             - sail
         extra_hosts:
             - 'host.docker.internal:host-gateway'
-
+    meilisearch:
+        image: 'getmeili/meilisearch:latest'
+        ports:
+            - '${FORWARD_MEILISEARCH_PORT:-7700}:7700'
+        environment:
+            MEILI_NO_ANALYTICS: '${MEILISEARCH_NO_ANALYTICS:-false}'
+        volumes:
+            - 'sail-meilisearch:/meili_data'
+        networks:
+            - sail
+        healthcheck:
+            test:
+                - CMD
+                - wget
+                - '--no-verbose'
+                - '--spider'
+                - 'http://127.0.0.1:7700/health'
+            retries: 3
+            timeout: 5s
+    redis:
+        image: 'redis:alpine'
+        ports:
+            - '${FORWARD_REDIS_PORT:-6379}:6379'
+        volumes:
+            - 'sail-redis:/data'
+        networks:
+            - sail
+        healthcheck:
+            test:
+                - CMD
+                - redis-cli
+                - ping
+            retries: 3
+            timeout: 5s
 networks:
     sail:
         driver: bridge
 volumes:
     sail-mysql:
+        driver: local
+    sail-meilisearch:
+        driver: local
+    sail-redis:
         driver: local
